--- a/18ywgmc/schedule/index.html
+++ b/18ywgmc/schedule/index.html
@@ -88,12 +88,12 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">10:00 - 10:30</th>
-        <td class="align-middle table-warning">Short Talk</td>
+        <td class="align-middle table-warning"><a href="./../program/index.html#T_Rigo">Damiano Rigo</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">10:30 - 11:00</th>
         <td class="align-middle table-light">Coffee break</td>
-        <td rowspan="2" class="align-middle table-light">Poster session</td>
+        <td rowspan="2" class="align-middle table-light"><a href="./../program/index.html#poster">Poster session</a></td>
         <td class="align-middle table-light">Coffee break</td>
       </tr>
       <tr>
@@ -110,9 +110,9 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">12:30 - 13:00</th>
-        <td class="align-middle table-warning">Short talk</td>
-        <td class="align-middle table-warning">Short talk</td>
-        <td class="align-middle table-warning">Short talk</td>
+        <td class="align-middle table-warning"><a href="./../program/index.html#T_Yago">Omayra Yago</a></td>
+        <td class="align-middle table-warning"><a href="./../program/index.html#T_Stratoglou">Efstratios Stratoglou</a></td>
+        <td class="align-middle table-warning"><a href="./../program/index.html#T_Goodman">Jacob Goodman</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">13:00 - 13:30</th>
@@ -126,8 +126,8 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">14:00 - 14:30</th>
-        <td class="align-middle table-warning">Short talk</td>
-        <td class="align-middle table-warning">Short talk</td>
+        <td class="align-middle table-warning"><a href="./../program/index.html#T_Costa">Mariana Costa</a></td>
+        <td class="align-middle table-warning"><a href="./../program/index.html#T_Jagna">Jagna Wiśniewska</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">14:30 - 15:00</th>
@@ -147,7 +147,7 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">16:30 - 17:00</th>
-        <td rowspan="2" class="align-middle table-info">Gong session</td>
+        <td rowspan="2" class="align-middle table-info"><a href="./../program/index.html#gong">Gong session</a></td>
         <td rowspan="2" class="align-middle table-success"><a href="./../program/index.html#C_Colombo">L. Colombo</a></td>
       </tr>
       <tr>
@@ -155,8 +155,8 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">17:30 - 18:00</th>
-        <td class="align-middle table-warning">Short talk</td>
-        <td class="align-middle table-warning">Short talk</td>
+        <td class="align-middle table-warning"><a href="./../program/index.html#T_Lopez">Asier López-Gordón</a></td>
+        <td class="align-middle table-warning"><a href="./../program/index.html#T_Schlarb">Markus Schlarb</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">18:00 - 18:30</th>
