--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -81,7 +81,7 @@
 	<h3>Organizing committee:</h3>
 	<ul>
 		<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a> (University of Warsaw, Poland)</li>
-		<li><a href="https://xavirivas.com/" target="_blank">Xavier Rivas</a> (International University of La Rioja, Spain)</li>
+		<li><a href="https://xrivas.com/" target="_blank">Xavier Rivas</a> (International University of La Rioja, Spain)</li>
 		<li>Bartosz M. Zawora (University of Warsaw, Poland)</li>
 		<li>Julia Lange (University of Warsaw, Poland)</li>
 		<li>Adam Maskalaniec (University of Warsaw, Poland)</li>
