--- a/gamma/index.html
+++ b/gamma/index.html
@@ -78,7 +78,7 @@
 				<h5>Organizing committee:</h5>
 				<ul class="ms-4">
 					<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a> (University of Warsaw)</li>
-					<li><a href="https://xavirivas.com/" target="_blank">Xavier Rivas</a> (International University of La Rioja)</li>
+					<li><a href="https://xrivas.com/" target="_blank">Xavier Rivas</a> (International University of La Rioja)</li>
 				</ul>
 				<h5>Participants:</h5>
 				<ul class="ms-4">
@@ -105,6 +105,28 @@
 			<div class="row">				
 
 				<h3 class="blue">&#9632; Conferences</h3>
+				
+				<h4 class="blue mb-3 mt-3">Spring 2024</h4>
+				<div class="accordion" id="accordion-spring24">
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading26">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse26" aria-expanded="false" aria-controls="collapse26">
+								<h5>TBA
+								<br>
+								Arnoldo Guerra IV &#8213; 25/01/2024, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse26" class="accordion-collapse collapse" aria-labelledby="heading26" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C4SejlO7EBs' target="_blank">Bartosz M. Zawora --- Kirillov structures and scaling symmetries</a> -->
+							</div>
+						</div>
+					</div>
+
 				
 				<h4 class="blue mb-3 mt-3">Fall 2023</h4>
 
