--- a/18ywgmc/program/index.html
+++ b/18ywgmc/program/index.html
@@ -162,6 +162,11 @@
   <p><em>Title:</em> Integrable systems on the symplectic realizations of \(\mathbf{e}(3)^*\)</p>
   <em>Abstract:</em>
   <p class="mb-5 justify">Using the \(U(2,2)\)-invariant symplectic structure of the Penrose twistor space we find full and complete \(E(3)\)-equivariant symplectic realizations of some Poisson submanifolds of the Lie-Poisson space \(\mathbf{e}(3)^*\equiv \mathbb{R}^3 \times \mathbb{R}^3\) dual to the Lie algebra \(\mathbf{e}(3)\) of the Euclidean group \(E(3)\), which is an underlying space in the rigid body theory. Considering concrete integrable cases of gyrostat systems on \(\mathbf{e}(3)^*\) we can take their liftings to the ones on the constructed symplectic realizations. This way we obtain integrable systems on the phase spaces given by the symplectic realizations.</p>
+  
+  <h6>Tymon Frelik (University of Warsaw, Poland)</h6>
+  <p><em>Title:</em> Complex multisymplectic Lie systems and the Schwarzian derivative</p>
+  <em>Abstract:</em>
+  <p class="mb-5 justify">The Schwarzian derivative is a special type of a derivative on complex functions defined on the Riemann sphere, which vanishes in the case of Möbius transformations. Recently, a novel geometric approach to the problem of symmetries of the real Schwarzian has been developed, making use of the Lie systems theory and multisymplectic structures. This poster showcases the ongoing work in generalizing these results to the complex case with several new observations on the geometry of the problem.</p>
 
 	
 </div>
