--- a/gamma/index.html
+++ b/gamma/index.html
@@ -111,7 +111,7 @@
 					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading26">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse26" aria-expanded="false" aria-controls="collapse26">
-								<h5>TBA
+								<h5>Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories
 								<br>
 								Arnoldo Guerra IV &#8213; 25/01/2024, 21:00</h5>
 							</button>
@@ -120,7 +120,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								This talk will focus on the construction of canonical lifts of group actions and their generating vector fields to the first-jet and first-jet dual bundles on which the Lagrangian and De Donder-Weyl Hamiltonian formalisms for first-order field theories take place. Our work introduces the notion of a canonical lift in the De Donder-Weyl Hamiltonian formalism, for both regular and singular field theories, while the Lagrangian analog has been well known for many years. The importance of canonical lifts in defining natural symmetries will be emphasized in our Hamiltonian construction. Our work will be illustrated in an example field theory: Einstein-Cartan gravity in 3+1 dimensions.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C4SejlO7EBs' target="_blank">Bartosz M. Zawora --- Kirillov structures and scaling symmetries</a> -->
 							</div>
@@ -201,7 +201,7 @@
 								<p class="text-justify">To illustrate the above claims, I will first survey <em>k</em>-symplectic structures and Lie systems, namely systems of ordinary differential equations whose general solutions can be described as a function, the superposition rule, of a family of particular solutions and some constants. Lie systems are equivalent to curves in a finite-dimensional Lie algebra of vector fields. In the so-called <em>k</em>-symplectic Lie systems [1], the Lie algebra can be chosen to consist of Hamiltonian vector fields with respect to a <em>k</em>-symplectic structure. This suggests us to endow <em>k</em>-symplectic structures with a Lie algebra of admissible functions and several related Poisson algebras. These Lie algebras give rise, through a Poisson-coalgebra approach, to methods to derive geometrically superposition rules for <em>k</em>-symplectic Lie systems. Our theory will be illustrated with examples from control theory, physics and mathematics [1, 2].</p>
 								<p class="text-justify">References:
 								<ol class="references">
-									<li>J. de Lucas and S. Vilarino. <em>k</em>-symplectic Lie systems: theory and appli- cations, <em>J. Differential Equations</em> <strong>258</strong> (6) (2015) 2221–2255.</li>
+									<li>J. de Lucas and S. Vilarino. <em>k</em>-symplectic Lie systems: theory and appli- cations, <em>J. Differential Equations</em> <strong>258</strong> (6) (2015) 2221-2255.</li>
 									<li>J. de Lucas, M. Tobolski and S. Vilariño. A new application of <em>k</em>-symplectic Lie systems, <em>Int. J. Geom. Methods Mod. Phys.</em> (2015) 1550071.</li>
 								</ol>
 								</p>
@@ -449,7 +449,7 @@
 						<div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#accordion-spring23">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
-								<p class="text-justify">In this talk, I will discuss the concept of completely integrable system. The Liouville–Arnold theorem and the main ideas of its proof will be presented, along with several illustrative examples. Additionally, I will mention the relationship between action-angle coordinates and the Hamilton–Jacobi equation, as well as the Kolmogorov–Arnold–Moser theory.</p>
+								<p class="text-justify">In this talk, I will discuss the concept of completely integrable system. The Liouville-Arnold theorem and the main ideas of its proof will be presented, along with several illustrative examples. Additionally, I will mention the relationship between action-angle coordinates and the Hamilton-Jacobi equation, as well as the Kolmogorov-Arnold-Moser theory.</p>
 								<strong>Link to the video: </strong><a href='https://youtu.be/y1-vfiHdF00' target="_blank">Asier López-Gordón --- An introduction to integrable systems</a>
 							</div>
 						</div>
