--- a/18ywgmc/program/index.html
+++ b/18ywgmc/program/index.html
@@ -140,7 +140,7 @@
   <p class="mb-5 justify">The aim of this talk is to briefly summarize reduction and reconstruction of dynamics in symplectic geometry for Hamiltonian and hyperregular Lagrangian systems. We review classic results and outline possible generalizations.</p>
   
   <h6>Arnoldo Guerra IV (Universitat de Barcelona, Spain)</h6>
-  <p><em>Title:</em> Canonical lifts in Multisymplectic De Donder--Weyl Hamiltonian Field Theories</p>
+  <p><em>Title:</em> Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</p>
   <em>Abstract:</em>
   <p class="mb-5 justify">This talk will focus on the construction of canonical lifts of group actions and their generating vector fields to the first-jet and first-jet dual bundles on which the Lagrangian and De Donder–Weyl Hamiltonian formalisms for first-order field theories take place. Our work introduces the notion of a canonical lift in the De Donder–Weyl Hamiltonian formalism, for both regular and singular field theories, while the Lagrangian analog has been well known for many years. The importance of canonical lifts in defining natural symmetries will be emphasized in our Hamiltonian construction. Our work will be illustrated in an example field theory: Einstein-Cartan gravity in \(3 + 1\) dimensions.</p>
   
@@ -148,6 +148,20 @@
   <p><em>Title:</em> A Brownian–Markov Stochastic Model for Cart-like Wheeled Mobile Robots</p>
   <em>Abstract:</em>
   <p class="mb-5 justify">Wheeled mobile robots are commonly used in a wide range of applications from automated warehouses to patrolling. A rigorous and accurate model describing their dynamics is then important for control and tracking. It is worth mentioning that the majority of these models in literature deal with deterministic settings. Therefore, they are not able to take into account stochastic uncertainty or non-predictable phenomena such as lateral grip loss. In this paper, we present a novel stochastic dynamic model which considers random perturbations, while also considering the effect of unknown dissipative external forces acting on wheeled mobile robots. In particular, our approach is based on a two-state hybrid system of Stochastic Differential Equations modeling the robot dynamics subject to Brownian motion noises, with transitions from one state to the other triggered by to a homogeneous Markov chain.</p>
+  
+  <h6>Pablo Nicolás (Universitat Politècnica de Catalunya, Spain)</h6>
+  <p><em>Title:</em> Poisson cohomology of \(b^m\)-Poisson manifolds</p>
+  <em>Abstract:</em>
+  <p class="justify">Poisson geometry is a vast generalization of the Hamiltonian setting of classical mechanics, described abstractly by symplectic geometry. The deformation theory of a Poisson manifold \((M,\Pi)\) is governed by the cohomology of the Lichnerowicz complex \((\mathfrak{X}^\bullet, \mathrm{d}_\Pi)\), called Poisson cohomology. The cohomology groups are generally infinite-dimensional, and explicit formulae are known for few Poisson manifolds.</p>
+
+  <p class="mb-5 justify">In this talk, we compute the Poisson cohomology groups of \(b^m\)-Poisson manifolds, motivated by a question of Alan Weinstein. We follow the line of Guillemin, Miranda, and Pires used to compute Poisson cohomology for \(b\)-manifolds. A key lemma due to Mărcuț and Osorno does not hold for \(b^m\)-Poisson cohomology. The failure of this result is measured by the cohomology of the quotient complex \(\mathfrak{X}^\bullet/^{b^m}\mathfrak{X}^\bullet\). By appropriately localizing this complex and using semi-local normal forms for \(b^m\)-Poisson structures, we are able to compute its cohomology groups. The Poisson cohomology groups of the manifold are obtained by means of the induced long exact sequence in cohomology. Time permitting, we will analyze the cohomology of \(b^m\)-surfaces by deblogging the Poisson structure.</p>
+  
+  <h6>Óscar Carballal (Universidad Complutense de Madrid, Spain)</h6>
+  <p><em>Title:</em> A representation theory approach to Lie-Hamilton systems based on \(\mathfrak{sp}(4,\mathbb{R})\) and applications</p>
+  <em>Abstract:</em>
+  <p class="justify">Lie-Hamilton systems are first-order systems of differential equations possessing a (non-linear) superposition rule which are compatible with a certain symplectic structure. They have been widely studied and classified under local diffeomorphisms on the real plane \(\mathbb{R}^2\). Nevertheless, there are few examples of higher-dimensional Lie-Hamilton systems which do not come from lower-dimensional systems. For the more general case of Lie systems, it was shown recently that higher-dimensional Lie systems (even nonlinear ones) can be constructed through a representation theory approach.</p>
+
+  <p class="mb-5 justify">In this talk we will propose a new method which allows us to obtain higher-dimensional Lie-Hamilton systems, mainly based on ideas coming from the representation theory of Lie algebras. We will focus on 4-dimensional Lie-Hamilton systems which we will interpret as systems on the configuration space \(T^*\mathbb{R}^2 \simeq \mathbb{R}^4\), particularly obtaining \(t\)-dependent Hamiltonian systems with a Lorentzian kinetic energy coming from the Lorentz algebra \(\mathfrak{so}(3, 1)\). As we will show, the symplectic Lie algebra \(\mathfrak{sp}(4, \mathbb{R})\) will play a prominent role when constructing these systems, which we will prove that are intrinsic, in the sense that they are not locally diffeomorphic to lower-dimensional systems.</p>
   
 
 
