--- a/gamma/index.html
+++ b/gamma/index.html
@@ -146,7 +146,7 @@
 								<p class="text-justify">
   								In the thesis we study several mathematical objects that are essential to formulate and model physical systems. Applying the tools provided by differential geometry, we develop and analyze different mathematical structures that are used in three physical contexts: dissipative dynamics, integrable systems and geometric quantization. To do it, we mainly employ the setting of b-symplectic geometry, a natural extension of symplectic geometry which is specifically designed to address manifolds with boundary.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C4SejlO7EBs' target="_blank">Bartosz M. Zawora --- Kirillov structures and scaling symmetries</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/zNiV-D284Dc' target="_blank">Pau Mir --- Singularities and symmetries on the crossroads of geometry and physics</a>
 							</div>
 						</div>
 					</div>
