--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<dd class="col-sm-10">xavier.rivas(at)unir.net<br>xavier.rivas(at)upc.edu</dd>
 						<dt class="col-sm-2">web page</dt>
 						<dd class="col-sm-10">
-							<a href="http://xavirivas.com">xrivas.com</a>
+							<a href="http://xrivas.com">xrivas.com</a>
 							<!-- <br>
 							<a href="https://web.mat.upc.edu/xavier.rivas/">web.mat.upc.edu/xavier.rivas</a> -->
 						</dd>
