--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					<li>Daniel Torres</li>
 					<li><a href="http://cud.unizar.es/svilariño" target="_blank">Silvia Vilariño</a></li>
 					<li>Marcin Zając</li>
-					<li>Bartosz M. Zawora</li>
+					<li><a href="https://bmzawora.github.io/" target="_blank">Bartosz M. Zawora</a></li>
 				</ul>
 			</div>
 
