--- a/18ywgmc/program/index.html
+++ b/18ywgmc/program/index.html
@@ -181,6 +181,11 @@
   <p><em>Title:</em> Complex multisymplectic Lie systems and the Schwarzian derivative</p>
   <em>Abstract:</em>
   <p class="mb-5 justify">The Schwarzian derivative is a special type of a derivative on complex functions defined on the Riemann sphere, which vanishes in the case of Möbius transformations. Recently, a novel geometric approach to the problem of symmetries of the real Schwarzian has been developed, making use of the Lie systems theory and multisymplectic structures. This poster showcases the ongoing work in generalizing these results to the complex case with several new observations on the geometry of the problem.</p>
+  
+  <h6>Dzianis Zhalukevich (UWB, Belarus)</h6>
+  <p><em>Title:</em> The method of field characteristics</p>
+  <em>Abstract:</em>
+  <p class="mb-5 justify">In this work, a method similar to the Maxwell electrodynamics method is used. The essence of this method is to determine the flows and circulations for fluid mechanics, the relationship of these quantities with each other is sought, which is the field characteristics. Based on the field characteristics, a qualitative theory of Newton's autonomous equations on the plane and in space is constructed.</p>
 
 	
 </div>
