--- a/gamma/index.html
+++ b/gamma/index.html
@@ -109,6 +109,24 @@
 				<h4 class="blue mb-3 mt-3">Spring 2024</h4>
 				<div class="accordion" id="accordion-spring24">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading27">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse27" aria-expanded="false" aria-controls="collapse27">
+								<h5>TBA
+								<br>
+								Javier de Lucas &#8213; 01/02/2024, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse27" class="accordion-collapse collapse" aria-labelledby="heading27" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading26">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse26" aria-expanded="false" aria-controls="collapse26">
 								<h5>Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories
@@ -122,10 +140,11 @@
 								<p class="text-justify">
   								This talk will focus on the construction of canonical lifts of group actions and their generating vector fields to the first-jet and first-jet dual bundles on which the Lagrangian and De Donder-Weyl Hamiltonian formalisms for first-order field theories take place. Our work introduces the notion of a canonical lift in the De Donder-Weyl Hamiltonian formalism, for both regular and singular field theories, while the Lagrangian analog has been well known for many years. The importance of canonical lifts in defining natural symmetries will be emphasized in our Hamiltonian construction. Our work will be illustrated in an example field theory: Einstein-Cartan gravity in 3+1 dimensions.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/C4SejlO7EBs' target="_blank">Bartosz M. Zawora --- Kirillov structures and scaling symmetries</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a>
 							</div>
 						</div>
 					</div>
+				</div>
 
 				
 				<h4 class="blue mb-3 mt-3">Fall 2023</h4>
