--- a/gamma/index.html
+++ b/gamma/index.html
@@ -109,9 +109,45 @@
 				<h4 class="blue mb-3 mt-3">Spring 2024</h4>
 				<div class="accordion" id="accordion-spring24">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading28">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse28" aria-expanded="false" aria-controls="collapse28">
+								<h5>A representation theory approach to Lie-Hamilton systems based on \(\mathfrak{sp}(4,\mathbb{R}\) and applications
+								<br>
+								Óscar Carballal &#8213; 15/02/2024, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse28" class="accordion-collapse collapse" aria-labelledby="heading28" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+  								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading28">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse28" aria-expanded="false" aria-controls="collapse28">
+								<h5>TBA
+								<br>
+								TBA &#8213; 08/02/2024, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse28" class="accordion-collapse collapse" aria-labelledby="heading28" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+  								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading27">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse27" aria-expanded="false" aria-controls="collapse27">
-								<h5>TBA
+								<h5>An introduction to infinite-dimensional jet bundles and the theory of non-local symmetries with applications
 								<br>
 								Javier de Lucas &#8213; 01/02/2024, 21:00</h5>
 							</button>
@@ -120,7 +156,7 @@
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								The infinite-dimensional jet bundle formulation of symmetries of differential equations is presented and the particular case of non-local symmetries is studied in detail. The theory is applied to study non-local symmetries of certain non-linear oscillators and retrieve previous results. Despite being technically more complicated than standard finite-dimensional jet bundles, the infinite-dimensional jet bundle setting is able to simplify certain mathematical structures while making the application of jets easier in practical cases.
 								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
 							</div>
