--- a/gamma/index.html
+++ b/gamma/index.html
@@ -109,19 +109,31 @@
 				<h4 class="blue mb-3 mt-3">Spring 2024</h4>
 				<div class="accordion" id="accordion-spring24">
 					<div class="accordion-item">
-						<h3 class="accordion-header" id="heading28">
-							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse28" aria-expanded="false" aria-controls="collapse28">
-								<h5>A representation theory approach to Lie-Hamilton systems based on \(\mathfrak{sp}(4,\mathbb{R}\) and applications
+						<h3 class="accordion-header" id="heading29">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse29" aria-expanded="false" aria-controls="collapse29">
+								<h5>A representation theory approach to Lie-Hamilton systems based on \(\mathfrak{sp}(4,\mathbb{R})\) and applications
 								<br>
 								Óscar Carballal &#8213; 15/02/2024, 21:00</h5>
 							</button>
 						</h3>
-						<div id="collapse28" class="accordion-collapse collapse" aria-labelledby="heading28" data-bs-parent="#accordion-spring24">
+						<div id="collapse29" class="accordion-collapse collapse" aria-labelledby="heading29" data-bs-parent="#accordion-spring24">
 							<div class="accordion-body">
 								<h6>Abstract</h6>
 								<p class="text-justify">
-  								TBA
+  								Lie-Hamilton systems are first-order systems of differential equations possessing a (non-linear) superposition rule which are compatible with a certain symplectic structure. They have been widely studied and classified under local diffeomorphisms on the real plane \(\mathbb{R}^{2}\) (see [1] for a general exposition).  Nevertheless, there are few examples of higher-dimensional Lie-Hamilton systems which do not come from lower-dimensional systems. For the more general case of Lie systems, it was shown recently that higher-dimensional Lie systems (even nonlinear ones) can be constructed through a representation theory approach [2,3].</p>
+
+								<p class="text-justify">In this talk we will propose a new method which allows us to obtain higher-dimensional Lie-Hamilton systems, mainly based on ideas coming from the representation theory of Lie algebras. We will focus on \(4\)-dimensional Lie-Hamilton systems which we will interpret as systems on the configuration space \(T^{*} \mathbb{R}^{2} \simeq \mathbb{R}^{4}\), particularly obtaining \(t\)-dependent Hamiltonian systems with a Lorentzian kinetic energy coming from the Lorentz algebra \(\mathfrak{so}(3, 1)\), from which coupled systems of \(t\)-dependent 1D oscillators will be obtained. As we will show, the symplectic Lie algebra \(\mathfrak{sp}(4, \mathbb{R})\) will play a prominent role when constructing these systems (\(t\)-dependent electromagnetic fields and \(t\)-dependent coupled oscillators), which we will prove that are <em>intrinsic</em>, in the sense that they are not locally diffeomorphic to lower-dimensional systems. This last step will be carried out using Cartan's approach to completely integrable distributions [4].</p>
+
+								<p class="text-justify">This is a joint work with R. Campoamor-Stursberg and F. J. Herranz.
   								</p>
+  								<p class="text-justify">References:
+								<ol class="references">
+									<li>J. de Lucas and C. Sardón. <em>A Guide to Lie Systems with Compatible Geometric Structures</em>. (Singapore: World Scientific) 2020. doi:10.1142/q02080.</li>
+									<li>R. Campoamor-Stursberg. Reduction by invariants and projection of linear representations of Lie algebras applied to the construction of nonlinear realizations. <em>J. Math. Phys.</em> <bf>59</bf> (2018) 033502. doi:10.1063/1.4989890</li>
+									<li>R. Campoamor-Stursberg. Invariant functions of vector field realizations of Lie algebras and some applications to representation theory and dynamical systems. <em>J. Phys.: Conf. Ser.</em> <bf>1071</bf> (2018) 012005. doi:10.1088/1742-6596/1071/1/012005</li>
+									<li>É. Cartan. <em>Les systèmes différentiels extérieurs et leurs applications géométriques.</em> (Paris: Hermann) 1945.</li>
+								</ol>
+								</p>
 								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
 							</div>
 						</div>
