--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<a href="https://scholar.google.es/citations?user=MyVZoPMAAAAJ" target="_blank">Google Scholar</a><br>
 							<a href="https://www.researchgate.net/profile/Xavier-Rivas-2" target="_blank">ResearchGate</a><br>
 							<a href="https://arxiv.org/a/rivas_x_1.html" target="_blank">arxiv.org</a><br>
-							<a href="https://www.mathgenealogy.org/id.php?id=278834" target="_blank">Mathematics Genealogy Project</a>
+							<a href="https://www.mathgenealogy.org/id.php?id=278834" target="_blank">Mathematics Genealogy Project</a><br>
 							<a href="https://www.zotero.org/xrivas" target="_blank">Zotero</a>
 						</dd>
 					</dl>
