--- a/gamma/index.html
+++ b/gamma/index.html
@@ -80,7 +80,7 @@
 					<li><a href="https://delucasaraujo.wixsite.com/uniwersytet" target="_blank">Javier de Lucas</a> (University of Warsaw)</li>
 					<li><a href="https://xrivas.com/" target="_blank">Xavier Rivas</a> (International University of La Rioja)</li>
 				</ul>
-				<h5>Participants:</h5>
+				<!-- <h5>Participants:</h5>
 				<ul class="ms-4">
 					<li>Tymon Frelik (University of Warsaw)</li>
 					<li>Jordi Gaset Rifà (Polytechnic University of Madrid)</li>
@@ -96,7 +96,7 @@
 					<li>Daniel Torres (Polytechnic University of Catalonia)</li>
 					<li>Krzysztof Jan Wolicki (University of Warsaw)</li>
 					<li>Bartosz Zawora (University of Warsaw)</li>
-				</ul>
+				</ul> -->
 
 			</div>
 
