--- a/gamma/index.html
+++ b/gamma/index.html
@@ -109,6 +109,24 @@
 				<h4 class="blue mb-3 mt-3">Spring 2024</h4>
 				<div class="accordion" id="accordion-spring24">
 					<div class="accordion-item">
+						<h3 class="accordion-header" id="heading29">
+							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse29" aria-expanded="false" aria-controls="collapse29">
+								<h5>TBA
+								<br>
+								Jagna Wiśniewska &#8213; 29/02/2024, 21:00</h5>
+							</button>
+						</h3>
+						<div id="collapse29" class="accordion-collapse collapse" aria-labelledby="heading29" data-bs-parent="#accordion-spring24">
+							<div class="accordion-body">
+								<h6>Abstract</h6>
+								<p class="text-justify">
+  								TBA
+								</p>
+								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+							</div>
+						</div>
+					</div>
+					<div class="accordion-item">
 						<h3 class="accordion-header" id="heading28">
 							<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse28" aria-expanded="false" aria-controls="collapse28">
 								<h5>A representation theory approach to Lie-Hamilton systems based on \(\mathfrak{sp}(4,\mathbb{R})\) and applications
@@ -152,7 +170,7 @@
 								<p class="text-justify">
   								The infinite-dimensional jet bundle formulation of symmetries of differential equations is presented and the particular case of non-local symmetries is studied in detail. The theory is applied to study non-local symmetries of certain non-linear oscillators and retrieve previous results. Despite being technically more complicated than standard finite-dimensional jet bundles, the infinite-dimensional jet bundle setting is able to simplify certain mathematical structures while making the application of jets easier in practical cases.
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/2tV80_yhWQ0' target="_blank">Javier de Lucas --- An introduction to infinite-dimensional jet bundles and the theory of non-local symmetries with applications</a>
 							</div>
 						</div>
 					</div>
