--- a/gamma/index.html
+++ b/gamma/index.html
@@ -146,7 +146,7 @@
   								</p>
   								<p class="text-justify">References:
 								<ol class="references">
-									<li>J. de Lucas and C. Sardón. <em>A Guide to Lie Systems with Compatible Geometric Structures</em>. (Singapore: World Scientific) 2020. doi:10.1142/q02080.</li>
+									<li>J. de Lucas and C. Sardón. <em>A Guide to Lie Systems with Compatible Geometric Structures</em>. (Singapore: World Scientific) 2020. doi:10.1142/q02080</li>
 									<li>R. Campoamor-Stursberg. Reduction by invariants and projection of linear representations of Lie algebras applied to the construction of nonlinear realizations. <em>J. Math. Phys.</em> <bf>59</bf> (2018) 033502. doi:10.1063/1.4989890</li>
 									<li>R. Campoamor-Stursberg. Invariant functions of vector field realizations of Lie algebras and some applications to representation theory and dynamical systems. <em>J. Phys.: Conf. Ser.</em> <bf>1071</bf> (2018) 012005. doi:10.1088/1742-6596/1071/1/012005</li>
 									<li>É. Cartan. <em>Les systèmes différentiels extérieurs et leurs applications géométriques.</em> (Paris: Hermann) 1945.</li>
