--- a/18ywgmc/schedule/index.html
+++ b/18ywgmc/schedule/index.html
@@ -180,7 +180,7 @@
   </table>
 </div>
 
-The conference dinner will take place on February 22nd in <a href="https://podwale25.pl/index.php" target="_blank">Kompania Piwna</a>, at 20:00. The address is <a href="https://maps.app.goo.gl/bdSNeuuPhk3HPyxP6" target="_blank">Podwale 25, 00-261 Warsaw, Poland</a>. The organizers will go to the restaurant from the <a href="https://maps.app.goo.gl/BYCaxxTYqoatsBhj8" target="_blank">MDM Hotel</a> located in Plac Konstytucji at 19:15.
+The conference dinner will take place on February 22nd in <a href="https://bazyliszek.waw.pl/" target="_blank">Bazyliszek</a>, at 20:00. The address is <a href="https://maps.app.goo.gl/ZRWiiUzuadWQSZBo7" target="_blank">Rynek Starego Miasta 1/3, 00-272 Warszawa, Poland</a>. The organizers will go to the restaurant from the <a href="https://maps.app.goo.gl/BYCaxxTYqoatsBhj8" target="_blank">MDM Hotel</a> located in Plac Konstytucji at 19:15.
 
 </div>
 
