--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -115,11 +115,14 @@
 	<h3>Financial support</h3>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-7 m-2">
+			<div class="col-sm-5 m-2">
 				<img src="img/fundacjia.png" class="img-fluid" alt="...">
 			</div>
 			<div class="col-sm-2 m-2">
 				<img src="img/fuw-logo.jpg" class="img-fluid" alt="...">
+			</div>
+			<div class="col-sm-2 m-2">
+				<img src="img/candela.png" class="img-fluid" alt="...">
 			</div>
 			<div class="col-sm-2 m-2">
 				<img src="img/idub.svg" class="img-fluid" alt="...">
