--- a/18ywgmc/program/index.html
+++ b/18ywgmc/program/index.html
@@ -186,6 +186,16 @@
   <p><em>Title:</em> The method of field characteristics</p>
   <em>Abstract:</em>
   <p class="mb-5 justify">In this work, a method similar to the Maxwell electrodynamics method is used. The essence of this method is to determine the flows and circulations for fluid mechanics, the relationship of these quantities with each other is sought, which is the field characteristics. Based on the field characteristics, a qualitative theory of Newton's autonomous equations on the plane and in space is constructed.</p>
+  
+  <h6>Adam Maskalaniec (University of Warsaw, Belarus)</h6>
+  <p><em>Title:</em> TBA</p>
+  <em>Abstract:</em>
+  <p class="mb-5 justify">TBA</p>
+  
+  <h6>Tomasz Sobczak (University of Warsaw, Belarus)</h6>
+  <p><em>Title:</em> TBA</p>
+  <em>Abstract:</em>
+  <p class="mb-5 justify">TBA</p>
 
 	
 </div>
