--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -115,24 +115,24 @@
 	<h3>Financial support</h3>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-5 m-2">
+			<div class="col-sm-6 m-2">
 				<img src="img/fundacjia.png" class="img-fluid" alt="...">
 			</div>
 			<div class="col-sm-2 m-2">
 				<img src="img/fuw-logo.jpg" class="img-fluid" alt="...">
 			</div>
-			<div class="col-sm-2 m-2">
+			<div class="col-sm-3 m-2">
 				<img src="img/candela.png" class="img-fluid" alt="...">
-			</div>
-			<div class="col-sm-2 m-2">
-				<img src="img/idub.svg" class="img-fluid" alt="...">
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-8 m-2">
-				<img src="img/gmc.png" class="img-fluid" alt="...">
-			</div>
 			<div class="col-sm-3 m-2">
+				<img src="img/idub.svg" class="img-fluid" alt="...">
+			</div>
+			<div class="col-sm-2 m-2">
+				<img src="img/GDFT_1.png" class="img-fluid" alt="...">
+			</div>
+			<div class="col-sm-4 m-2">
 				<img src="img/uw-logo-pl.png" class="img-fluid" alt="...">
 			</div>
 		</div>
