--- a/gamma/index.html
+++ b/gamma/index.html
@@ -152,7 +152,7 @@
 									<li>É. Cartan. <em>Les systèmes différentiels extérieurs et leurs applications géométriques.</em> (Paris: Hermann) 1945.</li>
 								</ol>
 								</p>
-								<!-- <strong>Link to the video: </strong><a href='https://youtu.be/XsCuqgt-bfY' target="_blank">Arnoldo Guerra IV --- Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</a> -->
+								<strong>Link to the video: </strong><a href='https://youtu.be/0ywUHJ4e2gE' target="_blank">Óscar Carballal --- A representation theory approach to Lie-Hamilton systems based on \(\mathfrak{sp}(4,\mathbb{R})\) and applications</a>
 							</div>
 						</div>
 					</div>
