--- a/18ywgmc/registration/index.html
+++ b/18ywgmc/registration/index.html
@@ -36,7 +36,7 @@
           <a class="nav-link active" href="./../registration/index.html" aria-disabled="true">Registration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./../program/index.html" aria-disabled="true">Program</a>
+          <a class="nav-link" href="./../programme/index.html" aria-disabled="true">Programme</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./../schedule/index.html" aria-disabled="true">Schedule</a>
