--- a/18ywgmc/schedule/index.html
+++ b/18ywgmc/schedule/index.html
@@ -36,7 +36,7 @@
           <a class="nav-link" aria-disabled="true" href="./../registration/index.html">Registration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" aria-disabled="true" href="./../program/index.html">Program</a>
+          <a class="nav-link" aria-disabled="true" href="./../programme/index.html">Programme</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" aria-disabled="true" href="./../schedule/index.html">Schedule</a>
@@ -79,40 +79,40 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">09:00 - 09:30</th>
-        <td rowspan="3" class="align-middle table-primary"><a href="./../program/index.html#C_Salazar">M. A. Salazar</a></td>
-        <td rowspan="3" class="align-middle table-success"><a href="./../program/index.html#C_Colombo">L. Colombo</a></td>
-        <td rowspan="2" class="align-middle table-primary"><a href="./../program/index.html#C_Salazar">M. A. Salazar</a></td>
+        <td rowspan="3" class="align-middle table-primary"><a href="./../programme/index.html#C_Salazar">M. A. Salazar</a></td>
+        <td rowspan="3" class="align-middle table-success"><a href="./../programme/index.html#C_Colombo">L. Colombo</a></td>
+        <td rowspan="2" class="align-middle table-primary"><a href="./../programme/index.html#C_Salazar">M. A. Salazar</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">09:30 - 10:00</th>
       </tr>
       <tr>
         <th scope="row" class="align-middle">10:00 - 10:30</th>
-        <td class="align-middle table-warning"><a href="./../program/index.html#T_Costa">Mariana Costa</a></td>
+        <td class="align-middle table-warning"><a href="./../programme/index.html#T_Costa">Mariana Costa</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">10:30 - 11:00</th>
         <td class="align-middle table-light">Coffee break</td>
-        <td rowspan="2" class="align-middle table-light"><a href="./../program/index.html#poster">Poster session</a></td>
+        <td rowspan="2" class="align-middle table-light"><a href="./../programme/index.html#poster">Poster session</a></td>
         <td class="align-middle table-light">Coffee break</td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">11:00 - 11:30</th>
-        <td rowspan="3" class="align-middle table-success"><a href="./../program/index.html#C_Colombo">L. Colombo</a></td>
-        <td rowspan="3" class="align-middle table-danger"><a href="./../program/index.html#C_Vermeeren">M. Vermeeren</a></td>
+        <td rowspan="3" class="align-middle table-success"><a href="./../programme/index.html#C_Colombo">L. Colombo</a></td>
+        <td rowspan="3" class="align-middle table-danger"><a href="./../programme/index.html#C_Vermeeren">M. Vermeeren</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">11:30 - 12:00</th>
-        <td rowspan="2" class="align-middle table-danger"><a href="./../program/index.html#C_Vermeeren">M. Vermeeren</a></td>
+        <td rowspan="2" class="align-middle table-danger"><a href="./../programme/index.html#C_Vermeeren">M. Vermeeren</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">12:00 - 12:30</th>
       </tr>
       <tr>
         <th scope="row" class="align-middle">12:30 - 13:00</th>
-        <td class="align-middle table-warning"><a href="./../program/index.html#T_Yago">Omayra Yago</a></td>
-        <td class="align-middle table-warning"><a href="./../program/index.html#T_Stratoglou">Efstratios Stratoglou</a></td>
-        <td class="align-middle table-warning"><a href="./../program/index.html#T_Lopez">Asier López-Gordón</a></td>
+        <td class="align-middle table-warning"><a href="./../programme/index.html#T_Yago">Omayra Yago</a></td>
+        <td class="align-middle table-warning"><a href="./../programme/index.html#T_Stratoglou">Efstratios Stratoglou</a></td>
+        <td class="align-middle table-warning"><a href="./../programme/index.html#T_Lopez">Asier López-Gordón</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">13:00 - 13:30</th>
@@ -126,13 +126,13 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">14:00 - 14:30</th>
-        <td class="align-middle table-warning"><a href="./../program/index.html#T_Rigo">Damiano Rigo</a></td>
-        <td class="align-middle table-warning"><a href="./../program/index.html#T_Jagna">Jagna Wiśniewska</a></td>
+        <td class="align-middle table-warning"><a href="./../programme/index.html#T_Rigo">Damiano Rigo</a></td>
+        <td class="align-middle table-warning"><a href="./../programme/index.html#T_Jagna">Jagna Wiśniewska</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">14:30 - 15:00</th>
-        <td rowspan="3" class="align-middle table-danger"><a href="./../program/index.html#C_Vermeeren">M. Vermeeren</a></td>
-        <td rowspan="3" class="align-middle table-primary"><a href="./../program/index.html#C_Salazar">M. A. Salazar</a></td>
+        <td rowspan="3" class="align-middle table-danger"><a href="./../programme/index.html#C_Vermeeren">M. Vermeeren</a></td>
+        <td rowspan="3" class="align-middle table-primary"><a href="./../programme/index.html#C_Salazar">M. A. Salazar</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">15:00 - 15:30</th>
@@ -147,16 +147,16 @@
       </tr>
       <tr>
         <th scope="row" class="align-middle">16:30 - 17:00</th>
-        <td rowspan="2" class="align-middle table-info"><a href="./../program/index.html#gong">Gong session</a></td>
-        <td rowspan="2" class="align-middle table-success"><a href="./../program/index.html#C_Colombo">L. Colombo</a></td>
+        <td rowspan="2" class="align-middle table-info"><a href="./../programme/index.html#gong">Gong session</a></td>
+        <td rowspan="2" class="align-middle table-success"><a href="./../programme/index.html#C_Colombo">L. Colombo</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">17:00 - 17:30</th>
       </tr>
       <tr>
         <th scope="row" class="align-middle">17:30 - 18:00</th>
-        <td class="align-middle table-warning"><a href="./../program/index.html#T_Goodman">Jacob Goodman</a></td>
-        <td class="align-middle table-warning"><a href="./../program/index.html#T_Schlarb">Markus Schlarb</a></td>
+        <td class="align-middle table-warning"><a href="./../programme/index.html#T_Goodman">Jacob Goodman</a></td>
+        <td class="align-middle table-warning"><a href="./../programme/index.html#T_Schlarb">Markus Schlarb</a></td>
       </tr>
       <tr>
         <th scope="row" class="align-middle">18:00 - 18:30</th>
