--- a/18ywgmc/index.html
+++ b/18ywgmc/index.html
@@ -40,7 +40,7 @@
           <a class="nav-link" href="./registration/index.html" aria-disabled="true">Registration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./program/index.html" aria-disabled="true">Program</a>
+          <a class="nav-link" href="./programme/index.html" aria-disabled="true">Programme</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./schedule/index.html" aria-disabled="true">Schedule</a>
@@ -73,9 +73,9 @@
 	
 	<h3>Courses:</h3>
 	<ul>
-		<li>María Amelia Salazar (Universidade Federal Fluminense, Brazil)<br><em><a href="./program/index.html#C_Salazar">Van est maps: the relation between the cohomology of Lie groups and the cohomology of Lie algebras</a></em></li>
-		<li>Leonardo Colombo (Centre for Automation and Robotics CSIC-UPM, Spain)<br><em><a href="./program/index.html#C_Colombo">Safety-guarantees with data-driven controls based on  Gaussian processes for quadrotors UAVs and multi-agent systems</a></em></li>
-		<li>Mats Vermeeren (Loughborough University, United Kingdom)<br><em><a href="./program/index.html#C_Vermeeren">Hamiltonian and Lagrangian perspectives on integrable systems</a></em></li>
+		<li>María Amelia Salazar (Universidade Federal Fluminense, Brazil)<br><em><a href="./programme/index.html#C_Salazar">Van est maps: the relation between the cohomology of Lie groups and the cohomology of Lie algebras</a></em></li>
+		<li>Leonardo Colombo (Centre for Automation and Robotics CSIC-UPM, Spain)<br><em><a href="./programme/index.html#C_Colombo">Safety-guarantees with data-driven controls based on  Gaussian processes for quadrotors UAVs and multi-agent systems</a></em></li>
+		<li>Mats Vermeeren (Loughborough University, United Kingdom)<br><em><a href="./programme/index.html#C_Vermeeren">Hamiltonian and Lagrangian perspectives on integrable systems</a></em></li>
 	</ul>
 
 	<h3>Organizing committee:</h3>
