--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="./../registration/index.html" aria-disabled="true">Registration</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./../program/index.html" aria-disabled="true">Program</a>
+          <a class="nav-link" href="./../programme/index.html" aria-disabled="true">Programme</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="./../schedule/index.html" aria-disabled="true">Schedule</a>
@@ -78,223 +78,209 @@
     </tr>
     <tr>
       <th scope="row">2</th>
-      <td>Maksymilian</td>
-      <td>Bartosik</td>
-      <td>University of Lodz, Faculty of Physics and Applied Informatics</td>
-      <td>Poland</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
       <td>Óscar</td>
       <td>Carballal</td>
       <td>Universidad Complutense de Madrid</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">4</th>
+      <th scope="row">3</th>
       <td>Jan</td>
       <td>Cieśliński</td>
       <td>University of Bialystok, Faculty of Physics</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">5</th>
+      <th scope="row">4</th>
       <td>Leonardo</td>
       <td>Colombo</td>
       <td>Centre for automation and robotics CSIC-UPM</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">6</th>
+      <th scope="row">5</th>
       <td>Mariana</td>
       <td>Costa Villegas</td>
       <td>University of Padova</td>
       <td>Italy</td>
     </tr>
     <tr>
-      <th scope="row">7</th>
+      <th scope="row">6</th>
       <td>Javier</td>
       <td>de Lucas</td>
       <td>University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">8</th>
+      <th scope="row">7</th>
       <td>Tymon</td>
       <td>Frelik</td>
       <td>Faculty of Physics, University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">9</th>
+      <th scope="row">8</th>
       <td>Jacob</td>
       <td>Goodman</td>
       <td>Antonio de Nebrija University</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">10</th>
+      <th scope="row">9</th>
       <td>Arnoldo</td>
       <td>Guerra IV</td>
       <td>Universitat de Barcelona</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">11</th>
+      <th scope="row">10</th>
       <td>Rubén</td>
       <td>Izquierdo</td>
       <td>Universidad Complutense de Madrid - ICMAT</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">12</th>
+      <th scope="row">11</th>
       <td>Julia</td>
       <td>Lange</td>
       <td>University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">13</th>
+      <th scope="row">12</th>
       <td>Jerzy</td>
       <td>Kijowski</td>
       <td>University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">14</th>
+      <th scope="row">13</th>
       <td>Asier</td>
       <td>López-Gordón</td>
       <td>ICMAT-CSIC</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">15</th>
+      <th scope="row">14</th>
       <td>Samuel</td>
       <td>Luque Astorga</td>
       <td>Universidad Complutense de Madrid</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">16</th>
+      <th scope="row">15</th>
       <td>Adam</td>
       <td>Maskalaniec</td>
       <td>University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">17</th>
+      <th scope="row">16</th>
       <td>Pablo</td>
       <td>Nicolás</td>
       <td>Universitat Politècnica de Catalunya</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">18</th>
+      <th scope="row">17</th>
       <td>Bartosz</td>
       <td>Prech</td>
       <td>University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">19</th>
+      <th scope="row">18</th>
       <td>Damiano</td>
       <td>Rigo</td>
       <td>University of Verona</td>
       <td>Italy</td>
     </tr>
     <tr>
-      <th scope="row">20</th>
+      <th scope="row">19</th>
       <td>Xavier</td>
       <td>Rivas</td>
       <td>Universidad Internacional de La Rioja</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">21</th>
+      <th scope="row">20</th>
       <td>María Amelia</td>
       <td>Salazar</td>
       <td>Universidade Federal Fluminense</td>
       <td>Brazil</td>
     </tr>
     <tr>
-      <th scope="row">22</th>
+      <th scope="row">21</th>
       <td>Markus</td>
       <td>Schlarb</td>
       <td>Julius-Maximilians-Universität Würzburg</td>
       <td>Germany</td>
     </tr>
     <tr>
-      <th scope="row">23</th>
+      <th scope="row">22</th>
       <td>Tomasz</td>
       <td>Sobczak</td>
       <td>Wydział Fizyki UW</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">24</th>
+      <th scope="row">23</th>
       <td>Efstratios</td>
       <td>Stratoglou</td>
       <td>Universidad Politécnica de Madrid</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">25</th>
+      <th scope="row">24</th>
       <td>Mats</td>
       <td>Vermeeren</td>
       <td>Loughborough University</td>
       <td>United Kingdom</td>
     </tr>
     <tr>
-      <th scope="row">26</th>
+      <th scope="row">25</th>
       <td>Federico</td>
       <td>Vesentini</td>
       <td>University of Verona</td>
       <td>Italy</td>
     </tr>
     <tr>
-      <th scope="row">27</th>
+      <th scope="row">26</th>
       <td>Elwira</td>
       <td>Wawreniuk</td>
       <td>University of Białystok</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">28</th>
+      <th scope="row">27</th>
       <td>Jagna</td>
       <td>Wiśniewska</td>
       <td>Universitat Politècnica de Catalunya</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">29</th>
+      <th scope="row">28</th>
       <td>Karolina</td>
       <td>Wojciechowicz</td>
       <td>University of Białystok</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">30</th>
-      <td>Qianqian</td>
-      <td>Xia</td>
-      <td>Nanjing University of Information Science and Technology</td>
-      <td>China</td>
-    </tr>
-    <tr>
-      <th scope="row">31</th>
+      <th scope="row">29</th>
       <td>Omayra</td>
       <td>Yago Nieto</td>
       <td>Universidad Complutense de Madrid</td>
       <td>Spain</td>
     </tr>
     <tr>
-      <th scope="row">32</th>
+      <th scope="row">30</th>
       <td>Bartosz</td>
       <td>Zawora</td>
       <td>University of Warsaw</td>
       <td>Poland</td>
     </tr>
     <tr>
-      <th scope="row">33</th>
+      <th scope="row">31</th>
       <td>Dzianis</td>
       <td>Zhalukevich</td>
       <td>UWB</td>
