--- a/18ywgmc/programme/index.html
+++ b/18ywgmc/programme/index.html
@@ -60,7 +60,7 @@
 
   <p>The conference will consist in three courses given by renowned researchers, several short talks aimed at young researchers, a gong session, and a poster session.</p>
 
-  <!-- You can download the programme <a href="">here</a>. -->
+  You can download the programme <a href="./../files/booklet.pdf">here</a>.
 
   <h3 class="my-4">Courses</h3>
   
