--- a/18ywgmc/participants/index.html
+++ b/18ywgmc/participants/index.html
@@ -274,7 +274,7 @@
     </tr>
     <tr>
       <th scope="row">30</th>
-      <td>Bartosz</td>
+      <td>Bartosz Maciej</td>
       <td>Zawora</td>
       <td>University of Warsaw</td>
       <td>Poland</td>
