--- a/18ywgmc/programme/index.html
+++ b/18ywgmc/programme/index.html
@@ -60,7 +60,7 @@
 
   <p>The conference will consist in three courses given by renowned researchers, several short talks aimed at young researchers, a gong session, and a poster session.</p>
 
-  You can download the programme <a href="./../files/booklet.pdf">here</a>.
+  You can download the programme <a target="_blank" href="./../files/booklet.pdf">here</a>.
 
   <h3 class="my-4">Courses</h3>
   
@@ -200,9 +200,9 @@
   <p class="mb-5 justify">Then, we use our results to analyse a particular type of systems of first-order differential equations, the so-called {\it Lie systems}, whose properties are determined by a Lie algebra of vector fields of Hamiltonian vector fields relative to a \(k\)-contact structure. The obtained systems, the hereafter called \(k\)-contact Lie systems, are analysed and applied to study relevant systems of ordinary differential equations with applications in physics and mathematics.</p>
   
   <h6 class="blue">&#9632; Xavier Rivas (Universidad Internacional de La Rioja, Spain)</h6>
-  <p><em>Title:</em> Reduction of multisymplectic Lie systems</p>
+  <p><em>Title:</em> Multicontact framework for non-conservative field theories</p>
   <em>Abstract:</em>
-  <p class="mb-5 justify">A Lie system describes the integral curves of a non-autonomous vector field taking values in a finite-dimensional Lie algebra of vector fields. If these vector fields are Hamiltonian with respect to a multisymplectic structure, we obtain the so-called multisymplectic Lie systems. We perform a study of reduction and reconstruction procedures for these systems.</p>
+  <p class="mb-5 justify">A new geometric structure inspired by multisymplectic and contact geometries, called <em>multicontact structure</em>, has been developed recently to describe non-conservative and action-dependent classical field theories. We review the main features of this formulation, showing how it is applied to study some classical theories in theoretical physics which are modified in order to include action-dependence; namely: the modified Klein-Gordon equation, and the action-dependent bosonic string.</p>
   
   <h6 class="blue">&#9632; Bartosz M. Zawora (University of Warsaw, Poland)</h6>
   <p><em>Title:</em> An energy-momentum method for ODEs admitting a \(k\)-symplectic structure</p>
