--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 				</ul>
 			</div>
 
-			<hr class="hr-blue my-4">
+			<!-- <hr class="hr-blue my-4">
 
 			<div class="row">
 				<h2 class="blue">&#9632; Teaching</h2>
@@ -237,7 +237,7 @@
 					<li><a href="docs/guies_docents/calcul1-fme.pdf" target="_blank">Càlcul en una variable</a>. Grau en Matemàtiques. FME, UPC.</li>
 					<li><a href="docs/guies_docents/calcul-eebe.pdf" target="_blank">Càlcul</a>. Graus en Enginyeria. EEBE, UPC.</li>
 				</ul>
-			</div>
+			</div> -->
 
 		</div>
 
