--- a/18ywgmc/programme/index.html
+++ b/18ywgmc/programme/index.html
@@ -139,7 +139,8 @@
   <h6 class="blue">&#9632; Samuel Luque Astorga (Universidad Complutense de Madrid, Spain)</h6>
   <p><em>Title:</em> A Review on Reduction and Reconstruction of Dynamics in Symplectic Geometry</p>
   <em>Abstract:</em>
-  <p class="mb-5 justify">The aim of this talk is to briefly summarize reduction and reconstruction of dynamics in symplectic geometry for Hamiltonian and hyperregular Lagrangian systems. We review classic results and outline possible generalizations.</p>
+  <p class="justify">The aim of this talk is to briefly summarize reduction and reconstruction of dynamics in symplectic geometry for Hamiltonian and hyperregular Lagrangian systems. We review classic results and outline possible generalizations.</p>
+  <p class="mb-5 justify">You can find the slides <a target="_blank" href="./../files/luque.pdf">here</a>.</p>
   
   <h6 class="blue">&#9632; Arnoldo Guerra IV (Universitat de Barcelona, Spain)</h6>
   <p><em>Title:</em> Canonical lifts in Multisymplectic De Donder-Weyl Hamiltonian Field Theories</p>
@@ -163,7 +164,8 @@
   <em>Abstract:</em>
   <p class="justify">Lie-Hamilton systems are first-order systems of differential equations possessing a (non-linear) superposition rule which are compatible with a certain symplectic structure. They have been widely studied and classified under local diffeomorphisms on the real plane \(\mathbb{R}^2\). Nevertheless, there are few examples of higher-dimensional Lie-Hamilton systems which do not come from lower-dimensional systems. For the more general case of Lie systems, it was shown recently that higher-dimensional Lie systems (even nonlinear ones) can be constructed through a representation theory approach.</p>
 
-  <p class="mb-5 justify">In this talk we will propose a new method which allows us to obtain higher-dimensional Lie-Hamilton systems, mainly based on ideas coming from the representation theory of Lie algebras. We will focus on 4-dimensional Lie-Hamilton systems which we will interpret as systems on the configuration space \(T^*\mathbb{R}^2 \simeq \mathbb{R}^4\), particularly obtaining \(t\)-dependent Hamiltonian systems with a Lorentzian kinetic energy coming from the Lorentz algebra \(\mathfrak{so}(3, 1)\). As we will show, the symplectic Lie algebra \(\mathfrak{sp}(4, \mathbb{R})\) will play a prominent role when constructing these systems, which we will prove that are intrinsic, in the sense that they are not locally diffeomorphic to lower-dimensional systems.</p>
+  <p class="justify">In this talk we will propose a new method which allows us to obtain higher-dimensional Lie-Hamilton systems, mainly based on ideas coming from the representation theory of Lie algebras. We will focus on 4-dimensional Lie-Hamilton systems which we will interpret as systems on the configuration space \(T^*\mathbb{R}^2 \simeq \mathbb{R}^4\), particularly obtaining \(t\)-dependent Hamiltonian systems with a Lorentzian kinetic energy coming from the Lorentz algebra \(\mathfrak{so}(3, 1)\). As we will show, the symplectic Lie algebra \(\mathfrak{sp}(4, \mathbb{R})\) will play a prominent role when constructing these systems, which we will prove that are intrinsic, in the sense that they are not locally diffeomorphic to lower-dimensional systems.</p>
+  <p class="mb-5 justify">You can find the slides <a target="_blank" href="./../files/carballal.pdf">here</a>.</p>
   
 
 
